--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-react-views": "^0.11.0",
+    "helmet": "^8.1.0",
     "http": "^0.0.1-security",
     "json": "^11.0.0",
     "jsonwebtoken": "^9.0.2",
