--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "express-react-views": "^0.11.0",
     "helmet": "^8.1.0",
     "http": "^0.0.1-security",
@@ -26,7 +28,8 @@
     "mongoose": "^8.13.1",
     "nodemailer": "^7.0.3",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
