--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-react-views": "^0.11.0",
+    "google-auth-library": "^10.1.0",
     "helmet": "^8.1.0",
     "http": "^0.0.1-security",
     "json": "^11.0.0",
