--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
